Изменена терминальная операция с toList() на collect() для возможного изменения выходной коллекции